--- a/src/css/_settings.scss
+++ b/src/css/_settings.scss
@@ -55,6 +55,10 @@ body {
     padding: 0;
     font-family: $font-1;
     overflow-x: hidden;
+
+    & > div {
+        padding-top: 20px;
+    }
 }
 
 li {
