--- a/src/css/_core/header.scss
+++ b/src/css/_core/header.scss
@@ -46,7 +46,7 @@ header {
     }
 
     .navigation {
-        a {
+        li {
             margin: 25px 5px;
         }
     }
@@ -60,9 +60,12 @@ header {
         }
 
         .navigation {
-            a {
-                margin: 10px 5px;
-                color: #fff;
+            li {
+                margin: 5px 5px;
+
+                a {
+                    color: #fff;
+                }
             }
         }
     }
@@ -71,5 +74,35 @@ header {
         flex: 0 0 100%;
         display: flex;
         justify-content: space-between;
+    }
+}
+
+.profil {
+
+    &::before {
+        content: '\f2bd';
+        position: relative;
+        display: inline-block;
+        font-family: 'Font Awesome 5 Free';
+        color: #fff;
+        margin-right: 10px;
+        z-index: 1;
+    }
+
+    &::after {
+        content: '';
+        position: absolute;
+        top: -12px;
+        box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+        bottom: -12px;
+        left: -1rem;
+        right: -1rem;
+        background: #2d2d2d;
+        z-index: 0;
+    }
+
+    span {
+        position: relative;
+        z-index: 1;
     }
 }
