Mise en place du menu

--- a/src/css/_core/_navigation.scss
+++ b/src/css/_core/_navigation.scss
@@ -5,13 +5,22 @@
 }
 
 .sousMenu {
-    display: none;
     position: absolute;
     top: #{calc(100% + 5px)};
     background: #fff;
     max-width: 1170px;
     width: 100%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -150%);
     box-shadow: 0 0 5px rgba(0,0,0,0.5);
+    transition: all 0.3s;
+    opacity: 0;
+    pointer-events: none;
+
+    &[aria-hidden="false"] {
+        display: block;
+        transform: translate(-50%, 0);
+        opacity: 1;
+        pointer-events: visible;
+    }
 }
