--- a/src/css/_core/_accroche.scss
+++ b/src/css/_core/_accroche.scss
@@ -1,6 +1,7 @@
 .accroche {
     position: relative;
-
+    display: flex;
+    align-items: center;
     min-height: 450px;
     overflow: hidden;
 
