--- a/client/src/css/components/_form-container.scss
+++ b/client/src/css/components/_form-container.scss
@@ -57,3 +57,76 @@
         }
     }
 }
+
+.form-container-1 {
+    display: grid;
+    min-width: 400px;
+    width: 100%;
+    max-width: 600px;
+    margin: 50px auto 20px;
+    padding: 40px 30px;
+    box-sizing: border-box;
+    background: rgba(255,255,255,0.5);
+
+    h1 {
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    input,
+    textarea {
+        margin: 5px 0;
+        padding: 5px;
+        border-radius: 5px;
+        border: 1px solid $color-1;
+        resize: none;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+    }
+
+    textarea {
+        height: 80px;
+    }
+
+    p {
+        font-size: 0.8rem;
+        color: red;
+    }
+
+    input[type="submit"] {
+        width: 200px;
+        margin-left: auto;
+        cursor: pointer;
+        transition: 0.4s;
+        background: $color-1;
+
+        &:hover {
+            background: $color-3;
+            color: white;
+        }
+    }
+}
+
+
+.form-adoption {
+    position: relative;
+    padding: 50px 0;
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: #{calc(50% - 50vw)};
+        right: #{calc(50% - 50vw)};
+        background: #ff8300;
+        z-index: -1;
+    }
+
+    h2 {
+        margin: 0;
+    }
+
+    #btn-adoption {
+        margin-left: 50px;
+    }
+}
