--- a/client/src/css/_settings.scss
+++ b/client/src/css/_settings.scss
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap");
+@import "../font-awesome/scss/fontawesome.scss";
+@import "../font-awesome/scss/solid.scss";
+@import "../font-awesome/scss/brands.scss";
 
 @mixin fas {
     font-family: 'Font Awesome 5 Free';
@@ -28,10 +31,26 @@
     right: #{calc(50% - 50vw)};
 }
 
+.relative {
+    position: relative;
+    margin-right: #{calc((50% - 50vw) + 50px)};
+}
+
 .flexCenter {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@mixin visuallyhidden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
 }
 
 .visuallyhidden {
