--- a/client/src/css/components/_list.scss
+++ b/client/src/css/components/_list.scss
@@ -1,20 +1,3 @@
-.liste_1 {
-    .item {
-        display: flex;
-
-        .visuel {
-            max-width: 150px;
-            width: 100%;
-        }
-
-        .itemInfo {
-            span {
-                display: block;
-                margin-bottom: 1rem;
-            }
-        }
-    }
-}
 [class*="liste_"] {
     padding: 0;
 
@@ -85,6 +68,24 @@
     }
 }
 
+.liste_1 {
+    .item {
+        display: flex;
+
+        .visuel {
+            max-width: 150px;
+            width: 100%;
+        }
+
+        .itemInfo {
+            span {
+                display: block;
+                margin-bottom: 1rem;
+            }
+        }
+    }
+}
+
 .liste_4 {
     display: flex;
     flex-wrap: wrap;
@@ -128,6 +129,124 @@
             }
         }
     }
+}
+
+#admin {
+    .slick-slider {
+        overflow: hidden;
+
+        .slick-track {
+            display: flex;
+        }
+
+        .slick-prev {
+            top: 75px;
+            left: -65px;
+
+            &::before {
+                content: fa-content($fa-var-chevron-left);
+                @extend .fas;
+                font-size: 3rem;
+                color: #d1e0f5;
+                text-shadow: 0 0 1px rgba(0,0,0,0.8);
+            }
+        }
+
+        .slick-next {
+            top: 75px;
+            right: -25px;
+
+            &::before {
+                content: fa-content($fa-var-chevron-right);
+                @extend .fas;
+                font-size: 3rem;
+                color: #d1e0f5;
+                text-shadow: 0 0 1px rgba(0,0,0,0.8);
+            }
+        }
+
+        .slick-prev, .slick-next {
+            position: absolute;
+            transform: translateY(-50%);
+            font-size: 0;
+            border: 0;
+            background: transparent;
+            cursor: pointer;
+        }
+    }
+
+    .slick-slide {
+        max-width: 370px;
+        width: 100% !important;
+        margin-right: 30px;
+
+        .item {
+            display: flex !important;
+            align-items: flex-end;
+            position: relative;
+            min-height: 150px;
+            padding: 20px;
+            box-sizing: border-box;
+            background: #589bff;
+            box-shadow: inset 0 0 25px rgba(0, 0, 0, 0.3);
+            transition: all 0.3s;
+            border-radius: 5px;
+
+            &.red {
+                background: #df4343;
+                max-width: 300px;
+            }
+
+            a {
+                color: #fff;
+                font-weight: 500;
+                text-transform: uppercase;
+                font-size: 1.4rem;
+                text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+
+                &.user {
+                    &::before {
+                        content: fa-content($fa-var-user);
+                        @extend .fas;
+                        position: absolute;
+                        top: 20px;
+                        right: 35px;
+                        text-shadow: none;
+                        font-size: 3rem;
+                        color: rgba(255,255,255,0.3);
+                    }
+                }
+
+                span {
+                    position: relative;
+                    z-index: 2;
+                }
+
+                &:hover, &:focus {
+
+                    &::after {
+                        background: rgba(0, 0, 0, 0.2);
+                    }
+                }
+
+                &::after {
+                    content: '';
+                    position: absolute;
+                    inset: 0;
+                    background: transparent;
+                    transition: all 0.3s;
+                }
+            }
+
+            &:hover, &:focus {
+                box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.0);
+            }
+        }
+    }
+}
+
+.mBot {
+    margin-bottom: 50px;
 }
 
 .count {
