--- a/client/src/css/index.scss
+++ b/client/src/css/index.scss
@@ -10,8 +10,10 @@
 @import "./components/list";
 @import "./components/TPL";
 @import "components/pets";
+@import "components/header_super_admin";
 @import "./pages/news";
 @import "./components/article";
+@import "./components/section";
 @import "../font-awesome/css/all.css";
 @import "./components/form-container";
 
