--- a/client/src/font-awesome/scss/_variables.scss
+++ b/client/src/font-awesome/scss/_variables.scss
@@ -272,6 +272,7 @@ $fa-var-chromecast: \f838;
 $fa-var-church: \f51d;
 $fa-var-circle: \f111;
 $fa-var-circle-notch: \f1ce;
+$fa-var-circle-plus: \f055;
 $fa-var-city: \f64f;
 $fa-var-clinic-medical: \f7f2;
 $fa-var-clipboard: \f328;
