--- a/client/src/css/index.scss
+++ b/client/src/css/index.scss
@@ -11,6 +11,7 @@
 @import "./components/list";
 @import "./components/TPL";
 @import "components/pets";
+@import "components/refuge";
 @import "components/header_super_admin";
 @import "./pages/news";
 @import "./components/article";
