--- a/client/src/css/components/_list.scss
+++ b/client/src/css/components/_list.scss
@@ -239,6 +239,7 @@
     background: $color-3;
     color: $color-1;
     box-shadow: 0 2px 2px rgba(51, 51, 51, 0.3);
+    margin-bottom: 2rem;
 
     & > div {
         flex: 0 0 #{calc(100% / 3)};
