--- a/client/src/css/profil.scss
+++ b/client/src/css/profil.scss
@@ -2,35 +2,39 @@
     display: flex;
     justify-content: space-between;
 
-    ul {
-        padding: 0;
-        margin: 0;
+    .admin & {
+        ul {
+            padding: 0;
+            margin: 0;
 
-        li {
-            display: inline-block;
-            margin-left: 10px;
+            li {
+                display: inline-block;
+                margin-left: 10px;
 
-            &:first-child {
-                margin-left: 0;
-            }
+                &:first-child {
+                    margin-left: 0;
+                }
 
-            a {
-                display: block;
-                padding: 5px 15px;
-                border-radius: 5px;
-                background: #cbcbcb;
-                border: 2px solid #cbcbcb;
-                @include tr;
+                a {
+                    display: block;
+                    padding: 5px 15px;
+                    border-radius: 5px;
+                    background: #cbcbcb;
+                    border: 2px solid #cbcbcb;
+                    @include tr;
 
-                &:hover,
-                &:focus,
-                &:active {
-                    background: #d5d5d5;
+                    &:hover,
+                    &:focus,
+                    &:active {
+                        background: #d5d5d5;
+                    }
                 }
             }
         }
     }
 }
+
+
 
 .liste_refuge {
     .item {
