Ajout de la carto

--- a/client/src/css/TPL/TPL_PETS_REFUGE.scss
+++ b/client/src/css/TPL/TPL_PETS_REFUGE.scss
@@ -1,4 +1,7 @@
 .TPL_PETS_REFUGE {
+    padding: 3rem 0;
+    margin-bottom: 0;
+
     &::before {
         content: '';
         position: absolute;
