--- a/client/src/css/index.scss
+++ b/client/src/css/index.scss
@@ -22,6 +22,7 @@
 @import "components/section";
 @import "components/form-container";
 @import "components/ariane";
+@import "components/maps";
 
 /* PAGES */
 @import "./pages/news";
