--- a/client/src/css/TPL/TPL_LISTE_ADOPTION.scss
+++ b/client/src/css/TPL/TPL_LISTE_ADOPTION.scss
@@ -26,7 +26,7 @@
 
                 & > div:first-child {
                     display: flex;
-                    align-items: start;
+                    align-items: flex-start;
                     flex-direction: column;
                     justify-content: center;
 
