Module stripe bancaire

--- a/client/src/css/index.scss
+++ b/client/src/css/index.scss
@@ -23,6 +23,7 @@
 @import "components/form-container";
 @import "components/ariane";
 @import "components/maps";
+@import "components/flexPage";
 
 /* PAGES */
 @import "./pages/news";
