--- a/client/src/css/_settings.scss
+++ b/client/src/css/_settings.scss
@@ -6,8 +6,6 @@
 @mixin fas {
     font-family: 'Font Awesome 5 Free';
     font-weight: 900;
-    font-size: 1.6rem;
-    color: #fff;
 }
 
 @mixin ext {
@@ -107,4 +105,28 @@ h2 {
 
 h3 {
     margin: 0 0 1rem;
+}
+
+ul.niv1 {
+    & > li {
+        &.withChild > a {
+            &::after {
+                content: '\f054';
+                display: inline-block;
+                margin-left: 7px;
+                color: #252525;
+                font-size: 0.75rem;
+                @include fas;
+            }
+        }
+
+        &:not(.withChild) {
+            margin-bottom: 0.75rem;
+        }
+
+        ul.niv2 {
+            margin-left: 1.25rem;
+            margin-bottom: 0.5rem;
+        }
+    }
 }
