--- a/client/src/css/index.scss
+++ b/client/src/css/index.scss
@@ -37,3 +37,4 @@
 @import "TPL/TPL_FORM_GESTION_REFUGE";
 @import "TPL/TPL_PETS_REFUGE";
 @import "TPL/TPL_LISTE__ANIMAUX";
+@import "TPL/TPL_DONS";
