--- a/client/src/css/_settings.scss
+++ b/client/src/css/_settings.scss
@@ -130,3 +130,13 @@ ul.niv1 {
         }
     }
 }
+
+.TPL_COMPTEUR {
+    padding: 1rem 2rem;
+    background: #e3e3e3;
+    font-weight: bold;
+    border: 2px solid darkgrey;
+    width: auto;
+    display: inline-block;
+    border-radius: 0;
+}
