--- a/client/src/css/components/stats.scss
+++ b/client/src/css/components/stats.scss
@@ -1,14 +1,46 @@
 .TPL_STATS {
+    position: relative;
     display: flex;
+    padding-top: 50px;
+    margin: 0 0 1rem;
+
+    &::before {
+        content: '€';
+        display: flex;
+        align-items: flex-start;
+        padding-left: 5px;
+        position: absolute;
+        top: 0;
+        bottom: 25px;
+        right: #{calc(100% - 19px)};
+        color: #b9b9b9;
+        font-weight: bold;
+        border-left: 1px solid #b9b9b9;
+    }
+
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: 25px;
+        left: 0;
+        right: 0;
+        border-bottom: 1px solid #b9b9b9;
+    }
 
     .column {
         flex: #{calc(100% / 12)};
         text-align: center;
 
+        &:first-child {
+            .month {
+                border-left: 0;
+            }
+        }
+
         .month {
             width: 100%;
-            border: 1px solid grey;
             box-sizing: border-box;
+            border-left: 1px solid #b9b9b9;
         }
 
         .containerStats {
@@ -19,7 +51,6 @@
 
             & > span:first-child {
                 width: 100%;
-                border: 1px solid grey;
                 box-sizing: border-box;
 
             }
@@ -27,10 +58,22 @@
     }
 }
 
+.n0 {
+    height: 27px;
+    background: rgb(200, 200, 200);
+    margin: 0 1px;
+}
+
 @for $i from 1 through 100 {
     .n#{$i} {
         $value: calc((#{$i} * 1%) + 27px);
         height: $value;
-        background: red;
+        background: rgba(175 - $i, 225, 175 - $i, 0.8);
+        border-top: 2px solid rgba(175 - $i, 225, 125 - $i, 1);
+        border-left: 2px solid rgba(175 - $i, 225, 125 - $i, 1);
+        border-right: 2px solid rgba(175 - $i, 225, 125 - $i, 1);
+        margin: 0 2px;
+        padding: 7px 5px 0;
+        box-sizing: border-box;
     }
 }
